fixed issue on mobile with flexboxes and the praesidium page

--- a/css/page-default.css
+++ b/css/page-default.css
@@ -88,14 +88,6 @@ h2 {
     justify-content: center;
 }
 
-.center {
-    margin: auto;
-    width: 50%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-
 @media (max-width: 992px){
     .club {
         display: flex;
